test/zinc_source/compile_errors/concurrency/05_chan_too_many_args.zn
// expected-error: chan\(\) accepts at most one capacity argument

fn main() {
    values = chan(1, 2)
}
